Changes have been made to ColorTypesResponse.java and ColorTypesRequest.java
Added JSONIgnore to ColorTypes.java to fix displaying bug regarding colorMixes showing up falsely due to missing data entries

ColorTypesController.java thoroughly tested through postman.

ColorTypesService.java has been made to support CRUD - tested in ColorTypesServiceTest.java

SecurityConfig.java changed to make endpoints accesible, this should be changed in the future