@@ -5,11 +5,14 @@ import com.example.kwbruunauktion.auktionSystem.dto.ColorTypesResponse;
 import com.example.kwbruunauktion.auktionSystem.entity.ColorTypes;
 import com.example.kwbruunauktion.auktionSystem.repository.ColorTypesRepository;
 import org.springframework.http.HttpStatus;
+import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
 
+@Service
 public class ColorTypesService {
 
     ColorTypesRepository colorTypesRepository;
@@ -25,26 +28,34 @@ public class ColorTypesService {
     }
 
     public List<ColorTypesResponse> getAllColorTypes(){
-        return colorTypesRepository.findAll().stream().map(colorTypes -> new ColorTypesResponse()).collect(Collectors.toList());
+        List<ColorTypes> allColorTypes = colorTypesRepository.findAll();
+        return allColorTypes.stream().map(colorTypes -> new ColorTypesResponse(colorTypes)).toList();
     }
 
-    public ColorTypesResponse deleteColorTypeById(long id){
-        ColorTypes foundColorType = colorTypesRepository.
-                findById(id).
-                orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Color type with id: "+id+" could not be found"));
-
-        colorTypesRepository.deleteById(id);
-        return new ColorTypesResponse(foundColorType);
+    public ColorTypesResponse getColorTypeById(Long id){
+        return new ColorTypesResponse(
+                colorTypesRepository.findById(id)
+                .orElseThrow(()-> new ResponseStatusException(HttpStatus.NOT_FOUND,"Color type with id: "+id+" could not be found"))
+        );
     }
 
-    public ColorTypesResponse editColorType(ColorTypesRequest colorTypesRequest, long id){
+    public ColorTypesResponse editColorType(ColorTypesRequest colorTypesRequest, Long id){
         ColorTypes foundColorType = colorTypesRepository.
                 findById(id).
                 orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Color type with id: "+id+" could not be found"));
 
         foundColorType.setType(colorTypesRequest.getType());
+        foundColorType.setUpdated(LocalDateTime.now());
+        colorTypesRepository.save(foundColorType);
         return new ColorTypesResponse(foundColorType);
     }
 
+    public ColorTypesResponse deleteColorTypeById(Long id){
+        ColorTypes foundColorType = colorTypesRepository
+                .findById(id)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Color type with id: "+id+" could not be found"));
 
+        colorTypesRepository.deleteById(id);
+        return new ColorTypesResponse(foundColorType);
+    }
 }
